--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="">
+  <ion-toolbar color="background">
   <ion-buttons slot="secondary">
     <ion-button>
        <img src="assets/Like.svg" alt="Heart Icon" style="height: 24px;" />
@@ -14,11 +14,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <app-item-publicacion></app-item-publicacion>
 </ion-content>
