--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,27 +2,35 @@
     margin-top: 10px;
 }
 
-/* Elimina la sombra del header/toolbar */
-ion-toolbar {
-    --box-shadow: none;
-    /* Elimina la sombra */
-    --border-width: 0;
-    /* Elimina el borde si lo hay */
+
+ion-header {
+    --box-shadow: none !important;
+    --border-width: 0 !important;
+    box-shadow: none !important;
+ background: var(--background);
 }
-/* Elimina el efecto de clic (ripple effect) en los botones */
+
+
 ion-button {
     --ripple-color: transparent !important;
 
 }
 
 
-/* Elimina el efecto de clic (ripple effect) */
 ion-button {
     --ripple-color: transparent !important;
     --background-hover: transparent !important;
-    /* Evita el fondo gris al pasar el cursor */
+
     --background-focused: transparent !important;
-    /* Evita el fondo gris cuando está enfocado */
+   
     --background-activated: transparent !important;
-    /* Evita el fondo gris al hacer clic */
+
+}
+
+ion-header {
+    --background: var(--ion-color-background);
+}
+
+ion-content{
+    --background: var(--ion-color-background);
 }
