--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,5 +14,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+    <app-item-history></app-item-history>
   <app-item-publicacion></app-item-publicacion>
 </ion-content>
